--- a/style.css
+++ b/style.css
@@ -125,18 +125,18 @@ body {
 }
 
 .grid-name {
-  grid-column: 5 / 7;
-  align-self: center;
+  grid-column: 4 / 8;          
+  align-self: end;             
   font-size: 40px;
-  margin-bottom: 80px;
+  margin-bottom: 30px;        
   text-align: left;
 }
 
 .grid-info {
-  grid-column: 5 / 9;
+  grid-column: 6 / 10;          
   font-size: 18px;
   line-height: 1.5;
-   margin-bottom: 100px;
+  margin-top: -40px;     
   padding: 10px 15px;
   display: block;
   text-align: left;
