--- a/style.css
+++ b/style.css
@@ -124,8 +124,8 @@ body {
   align-items: center;
 }
 
-.grid-name {
-  grid-column: 4 / 8;          
+..grid-name {
+  grid-column: 4 / 8;         
   align-self: end;             
   font-size: 40px;
   margin-bottom: 30px;        
@@ -133,10 +133,10 @@ body {
 }
 
 .grid-info {
-  grid-column: 6 / 10;          
+  grid-column: 6 / 10;         
   font-size: 18px;
   line-height: 1.5;
-  margin-top: -40px;     
+  margin-top: -40px;          
   padding: 10px 15px;
   display: block;
   text-align: left;
